--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -13,10 +13,10 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '8.0.x'
+        dotnet-version: '9.0.x'
 
     - name: Publish
-      run: dotnet publish -c Release -o release
+      run: dotnet publish Komputer/Komputer.csproj -c Release -o release
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
