--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,25 +1,59 @@
-name: Deploy WASM to GitHub Pages
+# Simple workflow for deploying static content to GitHub Pages
+name: Deploy static content to Pages
+env:
+  PUBLISH_DIR: src/Blazor.Wasm/bin/Release/net9.0/publish/wwwroot # 👈 update project name
+
 on:
- push:
-   branches:
-     - main
+  push:
+    paths:
+      - src/Blazor.Wasm/** # 👈 update project name
+    branches:
+      - main
+
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
- deploy:
-   runs-on: ubuntu-latest
-   steps:
-     - name: Checkout Code
-       uses: actions/checkout@v2
-     - name: Setup .NET SDK
-       uses: actions/setup-dotnet@v1
-       with:
-         dotnet-version: '9.0.x'
-     - name: Publish WASM App
-       run: dotnet publish -c Release -o dist
-     - name: Configure Base HREF
-       run: sed -i 's|<base href="/"|<base href="/<REPO_NAME>/"|g' dist/wwwroot/index.html
-     - name: Deploy to GitHub Pages
-       uses: JamesIves/github-pages-deploy-action@v4
-       with:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-         BRANCH: gh-pages
-         FOLDER: dist/wwwroot
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
+
+      - name: Get latest .NET SDK
+        uses: actions/setup-dotnet@v4.3.0
+        with:
+          dotnet-version: '9.0'
+
+      - name: Publish app
+        run: dotnet publish src/Blazor.Wasm -c Release # 👈 update project name
+
+      - name: Rewrite base href
+        uses: SteveSandersonMS/ghaction-rewrite-base-href@v1.1.0
+        with:
+          html_path: ${{ env.PUBLISH_DIR }}/index.html
+          base_href: /blazor-wasm/ # 👈 update to your repo name
+        
+      - name: Setup Pages
+        uses: actions/configure-pages@v5.0.0
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3.0.1
+        with:
+          path: ${{ env.PUBLISH_DIR }}
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4.0.5
