--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,5 +1,6 @@
 # Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
+
 env:
   PUBLISH_DIR: src/Komputer/bin/Release/net9.0/publish/wwwroot
 
@@ -44,8 +45,8 @@ jobs:
         uses: SteveSandersonMS/ghaction-rewrite-base-href@v1.1.0
         with:
           html_path: ${{ env.PUBLISH_DIR }}/index.html
-          base_href: /Komputer/
-        
+          base_href: /komputer/
+
       - name: Setup Pages
         uses: actions/configure-pages@v5.0.0
 
